--- a/nmk.yml
+++ b/nmk.yml
@@ -29,3 +29,14 @@ config:
     vscodeSettingsItems:
         cSpell.words:
             - buildenv
+
+    # Customize CSS for wider page
+    docExtraConfig:
+        html_static_path:
+          - _static
+        html_css_files:
+          - css/custom.css
+
+    # Temporary buildenv ignored files (should be integrated in nmk-base soon)
+    gitIgnoredFiles:
+      - .buildenv/
