Fix loading script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
               with:
                   python-version: "3.8"
             - name: Build
-              run: ./buildenv.sh run nmk build
+              run: ./buildenv.sh run nmk build git.dirty
 
             - name: Publish package on pypi.org
               uses: pypa/gh-action-pypi-publish@v1.5.0
