--- a/requirements.txt
+++ b/requirements.txt
@@ -6,27 +6,28 @@
 # Package dependencies from nmk project files
 #
 
-nmk-base
-black
-isort
-flake8
-pep8-naming
-flake8-builtins
-flake8-blind-except
-flake8-comprehensions
-flake8-string-format
-flake8-pep3101
-flake8-bugbear
-setuptools
-wheel
-Jinja2
 argcomplete
-pytest-xdist
+black
+flake8
+flake8-blind-except
+flake8-bugbear
+flake8-builtins
+flake8-comprehensions
+flake8-pep3101
+flake8-string-format
+isort
+Jinja2
+myst-parser
+nmk-base
+nmk-vscode
+pep8-naming
 pytest-cov
 pytest-multilog
+pytest-xdist
+setuptools
 sphinx
-sphinx_rtd_theme
-myst-parser
 sphinx-autoapi
+sphinx_rtd_theme
+wheel
 
 
