Support for Python 3.12
+ nmk tools upgrade

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,20 +19,20 @@ jobs:
                     - "3.9"
                     - "3.10"
                     - "3.11"
+                    - "3.12"
                 command:
                     - ./buildenv.sh run nmk tests
         runs-on: ${{ matrix.os }}
         steps:
-            # Checkout, with all submodules
+            # Checkout and fetch tags
             - name: Checkout
-              uses: actions/checkout@v3.3.0
-              with:
-                  fetch-depth: 0
-                  submodules: recursive
+              uses: actions/checkout@v4.1.4
+            - name: Fetch tags
+              run: git fetch --depth=1 --tags
 
             # Setup python
             - name: Set up Python ${{ matrix.version }}
-              uses: actions/setup-python@v4.4.0
+              uses: actions/setup-python@v5.1.0
               with:
                   python-version: ${{ matrix.version }}
 
@@ -46,7 +46,7 @@ jobs:
             # Archive outputs (depending on build step)
             - name: Archive the whole output (on failure)
               if: steps.build_n_tests.outcome == 'failure'
-              uses: actions/upload-artifact@v3.1.2
+              uses: actions/upload-artifact@v4.3.3
               with:
                   name: Outputs-${{ matrix.os }}-${{ matrix.version }}
                   path: |
@@ -54,12 +54,12 @@ jobs:
                     out/
             - name: Build Failed!
               if: steps.build_n_tests.outcome == 'failure'
-              uses: actions/github-script@v6.3.3
+              uses: actions/github-script@v7.0.1
               with:
                 script: |
                     core.setFailed('Previous step failed')
             - name: Archive artifacts (on success)
-              uses: actions/upload-artifact@v3.1.2
+              uses: actions/upload-artifact@v4.3.3
               with:
                   name: Outputs-${{ matrix.os }}-${{ matrix.version }}
                   path: |
@@ -68,8 +68,9 @@ jobs:
                     !out/tests/
 
             - name: Upload coverage information
-              uses: codecov/codecov-action@v3.1.1
+              uses: codecov/codecov-action@v4.3.1
               with: {'files': 'out/coverage.xml'}
+              env: {'CODECOV_TOKEN': '${{ secrets.CODECOV_TOKEN }}'}
               
 
 
@@ -81,12 +82,11 @@ jobs:
         steps:
             # Official build
             - name: Checkout
-              uses: actions/checkout@v3.3.0
-              with:
-                  fetch-depth: 0
-                  submodules: recursive
+              uses: actions/checkout@v4.1.4
+            - name: Fetch tags
+              run: git fetch --depth=1 --tags
             - name: Set up Python
-              uses: actions/setup-python@v4.4.0
+              uses: actions/setup-python@v5.1.0
               with:
                   python-version: "3.8"
             - name: Build
