--- a/requirements.txt
+++ b/requirements.txt
@@ -7,27 +7,13 @@
 #
 
 argcomplete
-black
-flake8
-flake8-blind-except
-flake8-bugbear
-flake8-builtins
-flake8-comprehensions
-flake8-pep3101
-flake8-string-format
-isort
 Jinja2
-myst-parser
+nmk-badges
 nmk-base
+nmk-doc
+nmk-github
+nmk-python
 nmk-vscode
-pep8-naming
-pytest-cov
-pytest-multilog
-pytest-xdist
-setuptools
-sphinx
 sphinx-autoapi
-sphinx_rtd_theme
-wheel
 
 
