--- a/src/tests/templates/buildenv-env.cfg
+++ b/src/tests/templates/buildenv-env.cfg
@@ -1,3 +1,4 @@
 [local]
-pipInstallArgs = --extra-index-url http://${SOME_USER_ENV_VAR}@foo.org
+pipInstallArgs = --extra-index-url
+                 http://${SOME_USER_ENV_VAR}@foo.org
 lookUp = False
