--- a/nmk.yml
+++ b/nmk.yml
@@ -16,7 +16,7 @@ config:
             description: Build environment setup system, based on Python venv
             scripts:
                 buildenv: buildenv.__main__:main
-                buildenv2: buildenv.__main__:main2
+                buildenv2: buildenv2.__main__:main
 
     # Dependencies
     pythonPackageRequirements:
